se finalizan estilos de productos y efemerides

--- a/secciones/efemerides.html
+++ b/secciones/efemerides.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300&display=swap"
             rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../sass/main.css">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 <body>
     <header class="encabezado-fechas">
@@ -34,12 +34,6 @@
 </section>
 <article class="fechas">
 <div>
-    <h2>ENERO</h2>
-</div>
-<div>
-    <h2>FEBRERO</h2>
-</div>
-<div>
     <h2>MARZO</h2>
     <H3>03 de marzo</H3>
     <p>Día del Whiskey Irlandés</p>
@@ -53,6 +47,8 @@
 </div>
 <div>
     <h2>MAYO</h2>
+    <h3>7 de mayo</h3>
+    <p>Día del Cosmopolitan</p>
     <h3>3° sábado de mayo</h3>
     <p>Día mundial del whisky</p>
 </div>
@@ -64,15 +60,9 @@
     <p>Día del bourbon</p>
 </div>
 <div>
-    <h2>JULIO</h2>
-</div>
-<div>
     <h2>AGOSTO</h2>
     <h3>16 de agosto</h3>
     <p>Día mundial del ron</p>
-</div>
-<div>
-    <h2>SEPTIEMBRE</h2>
 </div>
 <div>
     <h2>OCTUBRE</h2>
@@ -80,12 +70,6 @@
     <p>Día mundial del vodka</p>
     <h3>19 de octubre</h3>
     <p>Día del Gin&Tonic</p>
-</div>
-<div>
-    <h2>NOVIEMBRE</h2>
-</div>
-<div>
-    <h2>DICIEMBRE</h2>
 </div>
 </article>
 <footer class="piepag__fechas">
