--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -44,10 +44,10 @@
     <div class="container">
         <h2 class="whisky-lista"> WHISKY</h2>
         <section id="whisky">
-            <div><img src="../dealers-drinks-images/productos-whisky.jpg" alt=""></div>
+            <div><img src="../dealers-drinks-images/whiskycito.jpg" alt="whisky"><img src="../dealers-drinks-images/whiskycito2.jpg" alt="whisky"></div>
 
-        <div>
-            <h3>BLEND</h3>
+            <div>
+                <h3>BLEND</h3>
                 <ul>
                     <li> Antiquary Red 700 ml </li>
                     <li> Ballantines 1 L </li>
@@ -73,10 +73,10 @@
                     <li> Sir Edwards Beer Reserve 700 ml </li>
                     <li> White & Mackay 700 ml </li>
                 </ul>
-        </div>
-        <div>
+            </div>
+            <div>
                 <h3>SINGLE MALT</h3>
-            <ul>
+                <ul>
                     <li> Bruichladdich Classic Laddie 700 ml </li>
                     <li> Cardhu 12 años 700 ml </li>
                     <li> Glenfiddich 12 años 750 ml </li>
@@ -100,8 +100,8 @@
                     <li> The Macallan Triple Cask 12 años 700 ml </li>
                     <li> The Macallan Double Cask 12 años 700 ml </li>
                     <li> The Macallan Sherry Oak 12 años 700 ml </li>
-            </ul>
-        </div>
+                </ul>
+            </div>
             <div>
                 <h3>AMERICAN WHISKEY</h3>
                 <ul>
@@ -127,7 +127,7 @@
     <div class="container">
         <h2 class="gin-lista">GIN</h2>
         <div id="gin">
-            <div><img src="../dealers-drinks-images/productos-gin.jpg" alt=""></div>
+            <div><img src="../dealers-drinks-images/productos-gin.jpg" alt="ginandtonic"></div>
             <div>
                 <ul>
                     <li> Apostoles 700 ml </li>
@@ -151,10 +151,10 @@
                     <li> Heraclito y Macedonio 750 ml </li>
                     <li> Heredero 750 ml </li>
                 </ul>
-                </div>
-                <div>
+            </div>
+            <div>
                 <ul>
-                                        <li> Hendrick´s 700 ml </li>
+                    <li> Hendrick´s 700 ml </li>
                     <li> Larios 700 ml </li>
                     <li> Larios Rose 700 ml </li>
                     <li> Le Tribute 700 ml </li>
@@ -179,9 +179,11 @@
         </div>
     </div>
     <div class="container">
+        <h2 class="vodka-lista">VODKA</h2>
         <div id="vodka">
-            <ul> VODKA
-                <li> Absolut  500 ml </li>
+            <div><img src="../dealers-drinks-images/moscow-mule.jpg" alt="moscow-mule"></div>
+            <ul>
+                <li> Absolut 500 ml </li>
                 <li> Absolut 750 ml </li>
                 <li> Absolut Mango750 ml </li>
                 <li> Absolut Apeach750 ml </li>
@@ -189,10 +191,12 @@
                 <li> Absolut Vainilla 750 ml </li>
                 <li> Absolut Extrakt 750 ml </li>
                 <li> Belvedere 700 ml </li>
+                <li> Bulbash 500 ml </li>
+            </ul>
+            <ul>
                 <li> Bulbash Abedul 500 ml </li>
                 <li> Bulbash Arandanos 500 ml </li>
                 <li> Bulbash Tilo y Miel 500 ml </li>
-                <li> Bulbash 500 ml </li>
                 <li> Danzka 750 ml </li>
                 <li> Finlandia 750 ml </li>
                 <li> Pan 750 ml </li>
@@ -203,8 +207,10 @@
         </div>
     </div>
     <div class="container">
+        <h2 class="ron-lista">RON</h2>
         <div id="ron">
-            <ul> RON
+            <div><img src="../dealers-drinks-images/rhum.jpg" alt="ron"></div>
+            <ul> 
                 <li> Appleton Signature 750 ml  </li>
                 <li> Bacardi Oro 750 ml  </li>
                 <li> Flor de Caña 7 años Black 750 ml </li>
@@ -215,8 +221,10 @@
         </div>
     </div>
     <div class="container">
+        <h2 class="varios-lista">VARIOS</h2>
         <div id="varios">
-            <ul> VARIOS
+            <div><img src="../dealers-drinks-images/vermucito.jpg" alt="vermut"></div>
+            <ul> 
                 <li> Amarula 750 ml con vaso </li>
                 <li> Angostura 200 ml </li>
                 <li> Angostura Orange 100 ml </li>
@@ -233,6 +241,8 @@
                 <li> Cointreau 700 ml </li>
                 <li> Cointreau Noir 750 ml </li>
                 <li> Cynar 750 ml </li>
+                </ul>
+                <ul>
                 <li> Cynar 70 750 ml </li>
                 <li> Fireball Cinnamon 750 ml </li>
                 <li> Giovannoni Rosso 750 ml </li>
@@ -254,5 +264,5 @@
 
 
 
-</body>
+    </body>
 </html>
