Se configura menú hamburguesa

--- a/secciones/efemerides.html
+++ b/secciones/efemerides.html
@@ -1,87 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dealer´s Drinks - Fechas importantes</title>
-        <meta name="description" content="Efemerides, fechas importantes para la coctelería">
-        <meta name="keywords" content="cocteleria, bartender, whisky, aperitivo, gin, vodka, ron, licor">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300&display=swap"
-            rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/style.css">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dealer´s Drinks - Fechas importantes</title>
+    <meta name="description" content="Efemerides, fechas importantes para la coctelería">
+    <meta name="keywords" content="cocteleria, bartender, whisky, aperitivo, gin, vodka, ron, licor">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
+</head>
+
 <body>
-    <header class="encabezado-fechas">
+    <header class="container-fluid">
         <!--inicio del menú de navegación-->
-        <nav>
-            <ul class="menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./productos.html">Productos</a></li>
-                <li><a href="./historia.html">La historia del Dealer</a></li>
-                <li><a href="./recetas.html">Recetas</a></li>
-                <li><a href="./efemerides.html" target="Blank">Efemérides</a></li>
-            </ul>
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <a class="navbar-brand" href="../index.html">
+                        <img src="../dealers-drinks-images/logo-azul-redondo-sinfondo.png" alt="Dealers Drinks">
+                    </a>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">INICIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./productos.html">PRODUCTOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./recetas.html">RECETAS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./historia.html">LA HISTORIA DEL DEALER</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./efemerides.html">EFEMÉRIDES</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
         </nav>
+        <!--Fin del menú de navegación-->
     </header>
 
-<section class="efemerides">
-<h1>Efemérides</h1>
-<p>Algunas fechas importantes a tener en cuenta...</p>
-</section>
-<article class="fechas">
-<div>
-    <h2>MARZO</h2>
-    <H3>03 de marzo</H3>
-    <p>Día del Whiskey Irlandés</p>
-    <H3>17 de marzo</H3>
-    <p>San Patricio</p>
-</div>
-<div>
-    <h2>ABRIL</h2>
-    <h3>15 de abril</h3>
-    <p>Día del Bartender</p>
-</div>
-<div>
-    <h2>MAYO</h2>
-    <h3>7 de mayo</h3>
-    <p>Día del Cosmopolitan</p>
-    <h3>3° sábado de mayo</h3>
-    <p>Día mundial del whisky</p>
-</div>
-<div>
-    <h2>JUNIO</h2>
-    <h3>10 de junio</h3>
-    <p>Día del gin</p>
-    <h3>14 de junio</h3>
-    <p>Día del bourbon</p>
-</div>
-<div>
-    <h2>AGOSTO</h2>
-    <h3>16 de agosto</h3>
-    <p>Día mundial del ron</p>
-</div>
-<div>
-    <h2>OCTUBRE</h2>
-    <h3>04 de octubre</h3>
-    <p>Día mundial del vodka</p>
-    <h3>19 de octubre</h3>
-    <p>Día del Gin&Tonic</p>
-</div>
-</article>
-<footer class="piepag__fechas">
-    <div class="container">
-        <img src="../dealers-drinks-images/brindis.jpg" alt="cocteleria">
-        <h3>Te invitamos a celebrar con nosotros</h3>
-        <img src="../dealers-drinks-images/brindis-2.jpg" alt="cocteleria">
-
-
-    </div>
-</footer>
-
-
+    <section class="efemerides">
+        <h1>Efemérides</h1>
+        <p id="fechas--importantes">Algunas fechas importantes a tener en cuenta...</p>
+    </section>
+    <article class="fechas">
+        <div>
+            <h2>ENERO</h2>
+            <H3>01 de enero</H3>
+            <p>Día del Bloody Mary</p>
+        </div>
+        <div>
+            <h2>MARZO</h2>
+            <H3>03 de marzo</H3>
+            <p>Día del Whiskey Irlandés</p>
+            <H3>17 de marzo</H3>
+            <p>San Patricio</p>
+        </div>
+        <div>
+            <h2>ABRIL</h2>
+            <h3>15 de abril</h3>
+            <p>Día del Bartender</p>
+        </div>
+        <div>
+            <h2>MAYO</h2>
+            <h3>7 de mayo</h3>
+            <p>Día del Cosmopolitan</p>
+            <h3>3° sábado de mayo</h3>
+            <p>Día mundial del whisky</p>
+        </div>
+        <div>
+            <h2>JUNIO</h2>
+            <h3>10 de junio</h3>
+            <p>Día del gin</p>
+            <h3>14 de junio</h3>
+            <p>Día del bourbon</p>
+        </div>
+        <div>
+            <h2>AGOSTO</h2>
+            <h3>16 de agosto</h3>
+            <p>Día mundial del ron</p>
+        </div>
+        <div>
+            <h2>OCTUBRE</h2>
+            <h3>04 de octubre</h3>
+            <p>Día mundial del vodka</p>
+            <h3>19 de octubre</h3>
+            <p>Día del Gin&Tonic</p>
+        </div>
+    </article>
+    <footer class="piepag__fechas">
+        <div class="container">
+            <img src="../dealers-drinks-images/brindis.jpg" alt="cocteleria">
+            <h3>Te invitamos a celebrar con nosotros</h3>
+            <img src="../dealers-drinks-images/brindis-2.jpg" alt="cocteleria">
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
