--- a/secciones/historia.html
+++ b/secciones/historia.html
@@ -1,82 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dealer´s Drinks - Historia</title>
-        <meta name="description" content="Historia de Dealer´s Drinks">
-        <meta name="keywords" content="cocteleria, bartender, whisky, aperitivo, gin, vodka, ron, licor">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300&display=swap"
-            rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/style.css">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dealer´s Drinks - Historia</title>
+    <meta name="description" content="Historia de Dealer´s Drinks">
+    <meta name="keywords" content="cocteleria, bartender, whisky, aperitivo, gin, vodka, ron, licor">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
+</head>
+
 <body>
-    <header class="encabezado">
+    <header class="container-fluid">
         <!--inicio del menú de navegación-->
-        <nav>
-            <ul class="menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./productos.html">Productos</a></li>
-                <li><a href="./historia.html">La historia del Dealer</a></li>
-                <li><a href="./recetas.html">Recetas</a></li>
-                <li><a href="./efemerides.html" target="Blank">Efemérides</a></li>
-            </ul>
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <a class="navbar-brand" href="../index.html">
+                        <img src="../dealers-drinks-images/logo-azul-redondo-sinfondo.png" alt="Dealers Drinks">
+                    </a>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">INICIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./productos.html">PRODUCTOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./recetas.html">RECETAS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./historia.html">LA HISTORIA DEL DEALER</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./efemerides.html">EFEMÉRIDES</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
         </nav>
+        <!--Fin del menú de navegación-->
+    </header>
 
-    </header>     
 
-    
-<div class="historia">
-    <!--inicio historia-->
-    <h1>La historia del Dealer</h1>
-    <p>
-        La historia de Dealer's Drinks comienza en principio, a raíz de mis
-        ganas de emprender y luego por la pasión e interés que me
-        despertaban las espirituosas. Cada vez que me encontraba dentro de
-        un establecimiento gastronómico lo primero que miraba eran las
-        botellas y etiquetas detrás de la barra. Los vinos y las cervezas nunca
-        me llamaron demasiado la atención, todo mi interés se lo llevaban los
-        destilados.
-    </p>
-    <p>
-        Primeramente comencé a invertir de manera regular en bebidas para
-        consumo propio y al cabo de un tiempo me decidí a hacer la primera
-        inversión en una compra mayorista. Fue el 17 de octubre de 2016 que
-        Dealer´s Drinks pasó de ser sólo una idea, a convertirse en realidad.
-        Siempre con la premisa de que la tienda fuera virtual y no tener que
-        comprometerme con el alquiler de un local.
-    </p>
-    <p>
-        Lo consideraba casi como un hobby, le vendía a amigos y gente
-        conocida únicamente y con el tiempo mi red de clientes fue creciendo
-        lenta y progresivamente, sólo mediante el boca a boca. Luego decidí
-        capacitarme en coctelería y asistí a catas para ir adquiriendo mas
-        conocimientos y así poder asesorar mejor a los clientes. Mi interés por
-        el mundo de las espirituosas sigue creciendo día a día y eso se terminó
-        convirtiendo en la misión de Dealer's Drinks.
-    </p>
-    <p>
-        Reivindicar esa idea generalizada que existe sobre las bebidas con alta
-        graduación alcohólica: de que "no son para cualquiera". Todos podemos
-        encontrar una combinación acorde a nuestras preferencias. Solo hay
-        que saber cómo combinar, qué complementos van mejor con cada
-        bebida y la cantidad de hielo adecuada.
+    <div class="historia">
+        <!--inicio historia-->
+        <h1>La historia del Dealer</h1>
+        <p>
+            La historia de Dealer's Drinks comienza en principio, a raíz de mis
+            ganas de emprender y luego por la pasión e interés que me
+            despertaban las espirituosas. Cada vez que me encontraba dentro de
+            un establecimiento gastronómico lo primero que miraba eran las
+            botellas y etiquetas detrás de la barra. Los vinos y las cervezas nunca
+            me llamaron demasiado la atención, todo mi interés se lo llevaban los
+            destilados.
+        </p>
+        <p>
+            Primeramente comencé a invertir de manera regular en bebidas para
+            consumo propio y al cabo de un tiempo me decidí a hacer la primera
+            inversión en una compra mayorista. Fue el 17 de octubre de 2016 que
+            Dealer´s Drinks pasó de ser sólo una idea, a convertirse en realidad.
+            Siempre con la premisa de que la tienda fuera virtual y no tener que
+            comprometerme con el alquiler de un local.
+        </p>
+        <p>
+            Lo consideraba casi como un hobby, le vendía a amigos y gente
+            conocida únicamente y con el tiempo mi red de clientes fue creciendo
+            lenta y progresivamente, sólo mediante el boca a boca. Luego decidí
+            capacitarme en coctelería y asistí a catas para ir adquiriendo mas
+            conocimientos y así poder asesorar mejor a los clientes. Mi interés por
+            el mundo de las espirituosas sigue creciendo día a día y eso se terminó
+            convirtiendo en la misión de Dealer's Drinks.
+        </p>
+        <p>
+            Reivindicar esa idea generalizada que existe sobre las bebidas con alta
+            graduación alcohólica: de que "no son para cualquiera". Todos podemos
+            encontrar una combinación acorde a nuestras preferencias. Solo hay
+            que saber cómo combinar, qué complementos van mejor con cada
+            bebida y la cantidad de hielo adecuada.
 
-    </p>
-</div>
-    <!--fin historia-->
-<footer>
-    <div class="dealer--galeria">
-        <!--inicio galería del dealer-->
-        <img class="dealer-1" src="../dealers-drinks-images/el-dealer.jpeg" alt="dealer-1">
-        <img class="dealer-3" src="../dealers-drinks-images/dealer-3.png" alt="dealer-3">
-        <img class="dealer-6" src="../dealers-drinks-images/dealer-6.jpeg" alt="dealer-6">
+        </p>
     </div>
-    <!--fin galería del dealer-->
-</footer>
+    <!--fin historia-->
+    <footer>
+        <div class="dealer--galeria">
+            <!--inicio galería del dealer-->
+            <img class="dealer-1" src="../dealers-drinks-images/el-dealer.jpeg" alt="dealer-1">
+            <img class="dealer-3" src="../dealers-drinks-images/dealer-3.png" alt="dealer-3">
+            <img class="dealer-6" src="../dealers-drinks-images/dealer-6.jpeg" alt="dealer-6">
+        </div>
+        <!--fin galería del dealer-->
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
