--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -1,50 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Dealer´s Drinks - Productos</title>
-        <meta name="description" content="Tienda virtual de bebidas alcoholicas">
-        <meta name="keywords" content="Bebidas, espirituosas, alcoholicas, whisky, aperitivo, gin, vodka, ron, licor">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300&display=swap"
-            rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="../css/style.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dealer´s Drinks - Productos</title>
+    <meta name="description" content="Tienda virtual de bebidas alcoholicas">
+    <meta name="keywords" content="Bebidas, espirituosas, alcoholicas, whisky, aperitivo, gin, vodka, ron, licor">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
+</head>
+
 <body>
-    <header class="encabezado">
+    <header class="container-fluid">
         <!--inicio del menú de navegación-->
-        <nav>
-            <ul class="menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./productos.html">Productos</a></li>
-                <li><a href="./historia.html">La historia del Dealer</a></li>
-                <li><a href="./recetas.html">Recetas</a></li>
-                <li><a href="./efemerides.html" target="Blank">Efemérides</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar fixed-top navbar-dark bg-dark navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <a class="navbar-brand" href="../index.html">
+                        <img src="../dealers-drinks-images/logo-azul-redondo-sinfondo.png" alt="Dealers Drinks">
+                    </a>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">INICIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./productos.html">PRODUCTOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./recetas.html">RECETAS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./historia.html">LA HISTORIA DEL DEALER</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./efemerides.html">EFEMÉRIDES</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!--Fin del menú de navegación-->
     </header>
     <Section class="productos">
         <h1>Espirituosas exclusivas</h1>
     </Section>
     <div class="container">
         <div class="productos-iconos">
-            <a href="#whisky"><img src="../dealers-drinks-images/icono-whisky.jpeg" alt="icono-whisky"></a>
-            <a href="#gin"><img src="../dealers-drinks-images/icono-gin.jpeg" alt="icono-gin"></a>
-            <a href="#vodka"><img src="../dealers-drinks-images/icono-vodka.jpeg" alt="icono-vodka"></a>
-            <a href="#ron"><img src="../dealers-drinks-images/icono-ron.jpeg" alt="icono-ron"></a>
-            <a href="#varios"><img src="../dealers-drinks-images/icono-varios.jpeg" alt="icono-varios"></a>
+            <a href="#whisky-lista"><img src="../dealers-drinks-images/icono-whisky.jpeg" alt="icono-whisky"></a>
+            <a href="#gin-lista"><img src="../dealers-drinks-images/icono-gin.jpeg" alt="icono-gin"></a>
+            <a href="#vodka-lista"><img src="../dealers-drinks-images/icono-vodka.jpeg" alt="icono-vodka"></a>
+            <a href="#ron-lista"><img src="../dealers-drinks-images/icono-ron.jpeg" alt="icono-ron"></a>
+            <a href="#varios-lista"><img src="../dealers-drinks-images/icono-varios.jpeg" alt="icono-varios"></a>
         </div>
     </div>
     <div class="container">
-        <h2 class="whisky-lista"> WHISKY</h2>
+        <h2 id="whisky-lista"> WHISKY</h2>
         <section id="whisky">
-            <div><img src="../dealers-drinks-images/whiskycito.jpg" alt="whisky"><img src="../dealers-drinks-images/whiskycito2.jpg" alt="whisky"></div>
+            <div><img src="../dealers-drinks-images/whiskycito.jpg" alt="whisky"><img
+                    src="../dealers-drinks-images/whiskycito2.jpg" alt="whisky"></div>
 
             <div>
                 <h3>BLEND</h3>
@@ -125,7 +153,7 @@
 
     </div>
     <div class="container">
-        <h2 class="gin-lista">GIN</h2>
+        <h2 id="gin-lista">GIN</h2>
         <div id="gin">
             <div><img src="../dealers-drinks-images/productos-gin.jpg" alt="ginandtonic"></div>
             <div>
@@ -179,7 +207,7 @@
         </div>
     </div>
     <div class="container">
-        <h2 class="vodka-lista">VODKA</h2>
+        <h2 id="vodka-lista">VODKA</h2>
         <div id="vodka">
             <div><img src="../dealers-drinks-images/moscow-mule.jpg" alt="moscow-mule"></div>
             <ul>
@@ -207,10 +235,10 @@
         </div>
     </div>
     <div class="container">
-        <h2 class="ron-lista">RON</h2>
+        <h2 id="ron-lista">RON</h2>
         <div id="ron">
             <div><img src="../dealers-drinks-images/rhum.jpg" alt="ron"></div>
-            <ul> 
+            <ul>
                 <li> Appleton Signature 750 ml  </li>
                 <li> Bacardi Oro 750 ml  </li>
                 <li> Flor de Caña 7 años Black 750 ml </li>
@@ -221,10 +249,10 @@
         </div>
     </div>
     <div class="container">
-        <h2 class="varios-lista">VARIOS</h2>
+        <h2 id="varios-lista">VARIOS</h2>
         <div id="varios">
             <div><img src="../dealers-drinks-images/vermucito.jpg" alt="vermut"></div>
-            <ul> 
+            <ul>
                 <li> Amarula 750 ml con vaso </li>
                 <li> Angostura 200 ml </li>
                 <li> Angostura Orange 100 ml </li>
@@ -241,8 +269,8 @@
                 <li> Cointreau 700 ml </li>
                 <li> Cointreau Noir 750 ml </li>
                 <li> Cynar 750 ml </li>
-                </ul>
-                <ul>
+            </ul>
+            <ul>
                 <li> Cynar 70 750 ml </li>
                 <li> Fireball Cinnamon 750 ml </li>
                 <li> Giovannoni Rosso 750 ml </li>
@@ -261,8 +289,9 @@
             </ul>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
+</body>
 
-
-
-    </body>
 </html>
